@@ -1,9 +1,10 @@
 <window>
   <id>114</id>
   <defaultcontrol>403</defaultcontrol>
+  <visible>Player.HasMedia + Window.IsActive(PlayerControls) + !Window.IsActive(FullscreenVideo)</visible>
   <animation effect="fade" time="200">WindowOpen</animation>
   <animation effect="fade" time="200">WindowClose</animation>
-  <type>buttonMenu</type>
+  <type>dialog</type>
   <coordinates>
     <system>1</system>
     <posx>67</posx>
