@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 09-02-2006 changed: PlayerControls.xml closes due to skin condition rather than code conditions.
+ - 09-02-2006 fixed: Start wouldn't close OSD Audio Settings.  Keymap.xml entry added.
  - 08-02-2006 added: display cpu usage for audio/video/player thread in dvdplayer.
  - 08-02-2006 fixed: Includes messed up the order in the xml file.
  - 08-02-2006 fixed: Audio/Subtitle settings dialog was not working correctly.
